bean-validation: validate directly the method, not only the arguments; improve error locations